--- a/resources/index.html
+++ b/resources/index.html
@@ -42,7 +42,7 @@
             <div class="card">
                 <h4 id="type" class="headline-secondary">Typography</h4>
                 <h1 class="headline-primary">Take a look at this amazing headline</h1>
-                <p>This is a typical paragraph for the UI Kit. <a href="#" class="link">Here is what a link might look
+                <p id=>This is a typical paragraph for the UI Kit. <a href="#" class="link">Here is what a link might look
                         like</a>.
                     The
                     typical font family for this kit is Lato. This kit is intended for clean and refreshing web layouts.
@@ -63,13 +63,15 @@
         </div>
         <div class="col-4">
             <form class="form">
-                <legend id="forms" class="headline-secondary">Form Elements</legend>
-                <img class="img-avatar" src="../images/avatar.png" alt="Avatar">
-                <label class="hidden" for="username">Username:</label>
-                <input class="input" type="text" id="username" placeholder="Username">
-                <label class="hidden" for="password">Password:</label>
-                <input class="input" type="password" id="password" placeholder="Password">
-                <button class="btn default" type="submit" value="Login">Login</button>
+                <fieldset>
+                    <legend id="forms" class="headline-secondary">Form Elements</legend>
+                    <img class="img-avatar" src="../images/avatar.png" alt="Avatar">
+                    <label class="hidden" for="username">Username:</label>
+                    <input class="input" type="text" id="username" placeholder="Username">
+                    <label class="hidden" for="password">Password:</label>
+                    <input class="input" type="password" id="password" placeholder="Password">
+                    <button class="btn default" type="submit" value="Login">Login</button>
+                </fieldset>
             </form>
         </div>
     </div>
