--- a/resources/index.html
+++ b/resources/index.html
@@ -42,7 +42,7 @@
             <div class="card">
                 <h4 id="type" class="headline-secondary">Typography</h4>
                 <h1 class="headline-primary">Take a look at this amazing headline</h1>
-                <p id=>This is a typical paragraph for the UI Kit. <a href="#" class="link">Here is what a link might look
+                <p>This is a typical paragraph for the UI Kit. <a href="#" class="link">Here is what a link might look
                         like</a>.
                     The
                     typical font family for this kit is Lato. This kit is intended for clean and refreshing web layouts.
